# yinshipingtongbu

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/comasd/example/demopthread/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.c
app/src/main/java/comasd/example/demopthread/: MainActivity.java  VideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/comasd/example/demopthread/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
